2016-04-11      Gaius Mulley <gaius@gnu.org>

	* gm2/Make-lang.in:  new very simple rules for mc-devel and
          initial attempt at gm2-bootstrap using mc.
	* gm2/mc/decl.def:  implement variable declarations.
	* gm2/mc/decl.mod:  many changes to implement pass 3 and
	  the output of recursive data structures.
	* gm2/mc/mcError.def:  fixed parameter declarations so that they
	  match their implementation counterparts.
	* gm2/mc/mcError.mod:  consistant parameter declarations.
	* gm2/mc/mcLexBuf.def:  fixed parameter declarations so that they
	  match their implementation counterparts.
	* gm2/mc/mcMetaError.def:  fixed parameter declarations so that
          they match their implementation counterparts.
	* gm2/mc/mcPreprocess.mod:  use alists rather than lists.
	* gm2/mc/mcSearch.def:  consistant parameter declarations.
	* gm2/mc/mcSearch.mod:  consistant parameter declarations.
	* gm2/mc/nameKey.def:  consistant parameter declarations.
	* gm2/bnf/mc-3.bnf:  fix variable declarations in definition modules.
	* gm2/mc/mc.flex:  correct prototype.

2016-03-14      Gaius Mulley <gaius@gnu.org>

	* gm2/bnf/mc-1.bnf:  new file.
	* gm2/bnf/mc-2.bnf:  new file.
	* gm2/bnf/mc-3.bnf:  new file.
	* gm2/gm2-gcc/gcc-consolidation.h:  new file.
	* gm2/mc/Indexing.def:  new file.
	* gm2/mc/Indexing.mod:  new file.
	* gm2/mc/README:  new file.
	* gm2/mc/alists.def:  new file.
	* gm2/mc/alists.mod:  new file.
	* gm2/mc/decl.def:  new file.
	* gm2/mc/decl.mod:  new file.
	* gm2/mc/decl.mod-extra:  new file.
	* gm2/mc/lists.def:  new file.
	* gm2/mc/lists.mod:  new file.
	* gm2/mc/m2flex.def:  new file.
	* gm2/mc/mc.flex:  new file.
	* gm2/mc/mcComp.def:  new file.
	* gm2/mc/mcComp.mod:  new file.
	* gm2/mc/mcDebug.def:  new file.
	* gm2/mc/mcDebug.mod:  new file.
	* gm2/mc/mcError.def:  new file.
	* gm2/mc/mcError.mod:  new file.
	* gm2/mc/mcFileName.def:  new file.
	* gm2/mc/mcFileName.mod:  new file.
	* gm2/mc/mcLexBuf.def:  new file.
	* gm2/mc/mcLexBuf.h:  new file.